--- a/COMP3980_A4.vcxproj
+++ b/COMP3980_A4.vcxproj
@@ -63,6 +63,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
+    <ClInclude Include="crc.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="Physical.h" />
     <ClInclude Include="Protocol.h" />
@@ -74,6 +75,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
+    <ClCompile Include="crc.cpp" />
     <ClCompile Include="Physical.cpp" />
     <ClCompile Include="Session.cpp" />
   </ItemGroup>
